<resources>
    <string name="app_name">Updater</string>
    <string name="version_url" translatable="false">http://app-updater.pl/updates/txt/version</string>
    <string name="sprawdz_aktualizacje">Sprawdz Aktualizacje</string>
    <string name="version_message">Dostępna jest nowa wersja romu!!!</string>
    <string name="version_message_app">Dostępna jest nowa wersja aplikacji!!!</string>
    <string name="download_url" translatable="false">http://app-updater.pl/updates/txt/download_link</string>
    <string name="download_complete">Pobieranie zostało ukończone!!!</string>
    <string name="download_incomplete">Pobieranie nie zostało ukończone!!!</string>
    <string name="install_button">Zainstaluj</string>
    <string name="action_settings">Ustawienia</string>
    <string name="download_button">Pobierz</string>
    <string name="cancle_button">Anuluj</string>
    <string name="cancle_message">Pobieranie zostało zatrzymane!!!</string>
    <string name="action_report">Zgłoś błąd lub propozycję</string>
    <string name="supersu_text">Jeśli posiadasz SuperSu zaznacz tą opcje</string>
    <string name="xposed_text">Jeśli posiadasz Xposed zaznacz tę opcje</string>
    <string name="gapps_text">Jeśli chcesz aktualizować Gapps zaznacz tą opcje</string>
    <string name="type_txt">Typ zgłoszenia:</string>
    <string name="nick_text">Nick(Opcjonalne):</string>
    <string name="title_text">Tytuł:</string>
    <string name="contents_text">Treść:</string>
    <string name="action_info">Informacje o aplikcaji</string>
    <string name="version_text">Wersja aplikacji: $1</string>
    <string name="action_web">Otwórz stronę Web</string>
    <string name="app_message">Dostępna jest nowa wersja aplikacji!!!</string>
    <string name="time_txt">Częstotliwość odświeżania:</string>
    <string name="changelog_button">Pokaż changelog</string>
    <string name="changelog_text">Pokazywać changelog po każdej aktualizacji</string>
    <string name="close_changelog_dialog_txt">Zamknij</string>
    <string name="md5_link">http://app-updater.pl/updates/zip/update</string>
    <string name="os_version_text">Wersja systemu: $1</string>
    <string name="assets_button">Menadżer Dodatków</string>
    <string name="add_txt">Dodaj</string>
    <string name="addons_text">Dodatek:</string>
    <string name="addon_type_text">"Typ dodatku: "</string>
    <string name="link_assets_txt">Link:</string>
    <string name="name_assets_txt">Nazwa:</string>
    <string name="null_assets_txt">Aktualnie wybrany dodatek nie jest dostępny dla twojej wersji systemu</string>
    <string name="succes_assets_txt">Poprawnie dodano dodatek</string>
    <string name="isset_addon_txt">Wybrany dodatek jest już dodany</string>
    <string name="empty_name_assets_txt">Pole nazwa jest puste</string>
    <string name="empty_link_assets_txt">Pole link jest puste</string>
    <string name="edit_txt">Edycja</string>
    <string name="save_txt">Zapisz</string>
    <string name="delete_txt">Usuń</string>
    <string name="delete_addon_txt">Poprawnie usunięto dodatek</string>
    <string name="clear_assest_txt">Poprawnie usunięto wszytskie dodatki</string>
    <string name="error_add_assets_txt">Wystąpił błąd podczas dodawania dodatku</string>
</resources>
