<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/dialog_bg"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/addon_type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:textColor="@color/colorAccent" />

        <Spinner
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/type_spinner" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/stock_layout"
        android:visibility="gone"
        android:layout_weight="1.40">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/addons_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:id="@+id/addons_spinner" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/addon_layout"
        android:visibility="gone">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name_assets_txt"
                android:layout_weight="1.15"
                android:hint="Nazwa" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/link_assets_txt"
                android:layout_weight="0.85"
                android:hint="Link" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/add_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_assets_button" />

</LinearLayout>